--- a/manifest.json
+++ b/manifest.json
@@ -68,5 +68,13 @@
     "uniStatistics" : {
         "enable" : false
     },
-    "vueVersion" : "3"
+    "vueVersion" : "3",
+    "h5" : {
+        "title" : "小程序",
+        "router" : {
+            "mode" : "hash",
+            "base" : "./"
+        },
+        "template" : "template.h5.html"
+    }
 }
